Changes for 1.8.4rc2

 - [ZBX-3025] resurrected unreachable pollers and StartPollersUnreachable configuration parameter (asaveljevs,Sasha)
 - [ZBX-2351] fixed server trying to insert duplicate eventids into the database (asaveljevs,Sasha)
 - [ZBX-3069] renamed monitoring graphs combobox "All" entry to "not selected" (Vedmak)

Changes for 1.8.4rc1

 - [ZBX-2872] greatly improved API methods consistency (Aly)
 - [ZBX-3070] fixed event date format inconsistency (Vedmak)
 - [ZBX-3068] fixed possible crash of server while processing passive proxies (Sasha)
 - [ZBX-3068] fixed server memory leak while processing passive proxies (Sasha)
 - [ZBX-2749] fixed length parameter being ignored for web.page.regexp[] (asaveljevs)
 - [ZBX-2749] fixed agent crash in web.page.regexp[] on very long matched fragments (asaveljevs)
 - [ZBX-2913] fixed agent becoming unresponsive due to web.page.* checks (asaveljevs)
 - [ZBXNEXT-430] added support of net.tcp.listen and net.udp.listen under Linux (Sasha)
 - [ZBX-453] fixed --disable-static enabling static compilation (asaveljevs)
 - [ZBX-2992] acknowledges are now hidden in event details when turned off (KB)
 - [ZBX-3050] fixed that host can be named like an existing template and otherwise (KB)
 - [ZBX-3019] fixed templated graphs not being copied to discovered hosts in DM setup; thanks to Alexander Ignatyev (asaveljevs)
 - [ZBX-2860] fixed usergroup renaming (Vedmak)
 - [ZBX-3027] avg, delta, max, min, sum functions in popup_trexpr.php have a time shift input, so that this parameter now can be specified through GUI (KB)
 - [ZBX-2827] added checks when adding or updating maintenances, so that duplicate names could not be added (KB)
 - [ZBX-2978] fixed graphs import with Y axis set to an item (Vedmak)
 - [ZBX-2507] minimal graph dimension size is set to 20 pixels (Vedmak)
 - [ZBX-2665] web scenario steps on graphs now are in correct order (Vedmak)